fixing cursor glitch with hamburger-box menu icon on mobile

--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -72,6 +72,7 @@
         justify-content: center;
         cursor: pointer;
         z-index: 1100;
+        cursor: none;
     }
 
     /* Staggered Lines logic */
